adicionando conteudo no Index

--- a/index.html
+++ b/index.html
@@ -28,26 +28,26 @@
             </td>
         </tr>
         <tr align="center">
-            <td>
-                <p>IMG</p>
+            <td width="13%">
+                <img src="Batata.webp" alt="Porção de batata frita" width="100%">
             </td>
-            <td>
-                <h4>PRECO</h4>
-                <p>Descricao</p>
+            <td width="20%">
+                <h4>12,99</h4>
+                <p>Batata fritas</p>
             </td>
-            <td>
-                <p>IMG</p>
+            <td width="13%">
+                <img src="parmegiana.webp" alt="Bife a parmegianna" width="100%">
             </td>
-            <td>
-                <h4>PRECO</h4>
-                <p>Descricao</p>
+            <td width="20%">
+                <h4>45,00</h4>
+                <p>Parmegianna</p>
             </td>
-            <td>
-                <p>IMG</p>
+            <td width="13%">
+                <img src="Imagem de picole.jpg" alt="" width="100%">
             </td>
-            <td>
-                <h4>PRECO</h4>
-                <p>Descricao</p>
+            <td width="20%">
+                <h4>7,00</h4>
+                <p>Picolé de morango</p>
             </td>
         </tr>
         <tr align="center">
